# deepsurfer-train

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_docker.sh  pyproject.toml  run_docker.sh  setup.cfg
deepsurfer_train/: __init__.py  __main__.py  atlas.py  cli.py  data.py  enums.py  locations.py
deepsurfer_train/commands/: __init__.py  setup_project_dir.py  train.py
deepsurfer_train/methods/: base.py  bayesnet.py  three_d_unet.py  two_d_unet_ensemble.py
deepsurfer_train/models/: __init__.py  fastsurfer.py
deepsurfer_train/preprocess/: dataset.py  transforms.py
deepsurfer_train/resources/training_configs/: bayesnet_model_config.json  debug_2d_unet_axial_model_config.json  debug_2d_unet_model_config.json  debug_bayesnet_model_config.json  debug_data_config.json  debug_unet_model_config.json  default_data_config.json  unet_2d_model_config.json  unet_axial_2d_model_config.json  unet_model_config.json
deepsurfer_train/train/: training_loop.py
deepsurfer_train/visualization/: tensorboard.py
docker/: container_bashrc
singularity/: build_singularity.sh  run_singularity.sh  singularity.recipe
slurm/: slurm_entrypoint.sh  train.job
tests/: test_import.py
