# This file controls how pip installs the package and its dependencies
# To understand how to use it, see
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.poetry]
name = "deepsurfer-train"
version = "0.1.0"
# Add all run time dependencies here according to the format described here
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#declaring-required-dependency
description = "Code for training and evaluating Deepsurfer models"
authors = [ "Christopher Bridge <cbridge@mgh.harvard.edu>" ]
readme = "README.md"
homepage = "https://github.com/CPBridge/deepsurfer-train"
repository = "https://github.com/CPBridge/deepsurfer-train"
documentation = "https://github.com/CPBridge/deepsurfer-train/docs"
include = ["resources/*"]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.5"
importlib-resources = "^6.0.0"
monai = "^1.2.0"
numpy = "^1.25.1"
pandas = "^2.0.3"
pycrumbs = "^0.1.3"
pydicom = "^2.4.1"
python-gdcm = "^3.0.22"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
SimpleITK = "^2.2.1"
torch = "^1.13.0"
torchvision = "^0.14.0"
voxynth = { git = "https://github.com/CPBridge/voxynth.git", rev = "8ef968727dc371f33238b6bbe3df6491ff4a85bf" }
matplotlib = "^3.8.0"
nibabel = "^5.1.0"
tensorboard = "^2.15.0"

[tool.poetry.group.dev.dependencies]
# dev dependencies are those used when developing the package but are not needed
# to run. This mostly includes linters and other quality control tools.
# To install these packages, run "pip install -e ".[dev]""
black = "^23.7.0"
coverage = "^7.2.7"
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
importlib_resources = "^6.0.0"
ipython = "^8.14.0"
isort = "^5.12.0"
jupyterlab = "^4.0.3"
mypy = "^1.4.1"
nbstripout = "^0.6.1"
pep8-naming = "^0.13.3"
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"
Pygments = "^2.15.1"
pytest = "^7.4.0"
typeguard = "^4.0.0"

[tool.poetry.scripts]
deepsurfer-train = "deepsurfer_train.cli:run_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
